# HostsToolkit

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  HT_ru_RU.ts  README.md  app.cpp  app.h  app.ui  bgproc.cpp  config.txt  engine.cpp  engine.h  entry.h  entry.ui  header.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  network.cpp  network.h  script.cpp  settings.txt
.github/ISSUE_TEMPLATE/: bug_report.md
res/: res.qrc
src/: app.cpp  app.h  app.ui  const.h  engine.cpp  engine.h  main.cpp  mainwindow.cpp  network.cpp  network.h
